--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
         </div>
 
         <div id="game"></div>
+        <div class="button-panels">
+            
+            <input class="actual-buttons" id="start" type="button" value="Start"></button>
+            <input class="actual-buttons" id="pause" type="button" value="Pause"></button>
+            <input class="actual-buttons" id="reset" type="button" value="Reset"></button>
+        </div> 
+
     </div>
     <script src="clock.js"></script>
 </body>
