--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="all">
-        <!-- <div class="blocks">
+        <div class="blocks">
             <h1 >CastleClock</h1>
-        </div> -->
+        </div>
         <div class="both-timers">
             <div id="first-timer">
                 <div class="time-display">
