Started  a way to increase time

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <div id="game"></div>
         <div class="button-panels">
-            
+            <input type="text" class="white-time-arrow-up" value="Increase time">
             <input class="actual-buttons" id="start" type="button" value="Start"></button>
             <input class="actual-buttons" id="pause" type="button" value="Pause"></button>
             <input class="actual-buttons" id="reset" type="button" value="Reset"></button>
