Got something to display, but not formatted correctly

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     
 
                     <div id="first">
-                            <span id="white-hours"></span>
+                            <!-- <span id="white-hours"></span>
                             <span id="white-minutes"></span>
                             <span>:</span>
-                            <span id="white-seconds"></span>
+                            <span id="white-seconds"></span> -->
                           
                     </div>
                 </div>
@@ -46,7 +46,7 @@
         <div id="game"></div>
         <div class="button-panels">
             <!-- <input type="text" class="white-time-arrow-up" value="Increase time"></button> -->
-            <input class="actual-buttons" id="start" type="button" value="Start"></button>
+            <input class="actual-buttons" id="start" type="button" value="Start" onclick="startDecreaser()"></button>
             <input class="actual-buttons" id="pause" type="button" value="Pause"></button>
             <input class="actual-buttons" id="reset" type="button" value="Reset"></button>
         </div> 
