Got something to countdown correctly

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="game"></div>
         <div class="button-panels">
             <!-- <input type="text" class="white-time-arrow-up" value="Increase time"></button> -->
-            <input class="actual-buttons" id="start" type="button" value="Start" onclick="startDecreaser()"></button>
+            <input class="actual-buttons" id="start" type="button" value="Start" onclick="startCountdown1()"></button>
             <input class="actual-buttons" id="pause" type="button" value="Pause"></button>
             <input class="actual-buttons" id="reset" type="button" value="Reset"></button>
         </div> 
