Got one side working with more accurate time controls

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                     
 
                     <div id="first">
+                        
+
                             <!-- <span id="white-hours"></span>
                             <span id="white-minutes"></span>
                             <span>:</span>
@@ -45,10 +47,14 @@
 
         <div id="game"></div>
         <div class="button-panels">
+
+                <div class="actual-buttons" onclick="startCountdown1()">Start</div>
+                <div class="actual-buttons" onclick="pauseCountdown1()">Pause</div>
+                <div class="actual-buttons" onclick="resetCountdown1()">Reset</div>
             <!-- <input type="text" class="white-time-arrow-up" value="Increase time"></button> -->
-            <input class="actual-buttons" id="start" type="button" value="Start" onclick="startCountdown1()"></button>
+            <!-- <input class="actual-buttons" id="start" type="button" value="Start" onclick="startCountdown1()"></button>
             <input class="actual-buttons" id="pause" type="button" value="Pause"></button>
-            <input class="actual-buttons" id="reset" type="button" value="Reset"></button>
+            <input class="actual-buttons" id="reset" type="button" value="Reset"></button> -->
         </div> 
 
     </div>
