--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                 <div class="actual-buttons" onclick="startCountdown1()">Start</div>
                 <div class="actual-buttons" onclick="pauseCountdown1()">Pause</div>
                 <div class="actual-buttons" onclick="resetCountdown1()">Reset</div>
+
+                <div class="actual-buttons-2" onclick="startCountdown2()">Start</div>
+                <div class="actual-buttons-2" onclick="pauseCountdown2()">Pause</div>
+                <div class="actual-buttons-2" onclick="resetCountdown2()">Reset</div>
             <!-- <input type="text" class="white-time-arrow-up" value="Increase time"></button> -->
             <!-- <input class="actual-buttons" id="start" type="button" value="Start" onclick="startCountdown1()"></button>
             <input class="actual-buttons" id="pause" type="button" value="Pause"></button>
