Clock now stop and starts based on the other one starting or stopping

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
-    <title>Ticker</title>
+    <title>Pegusus Chess Clock</title>
 </head>
 <body>
     <div class="all">
         <div class="blocks">
-            <h1 >CastleClock</h1>
+            <h1 >Pegagus</h1>
         </div>
         <div class="both-timers">
             <div id="first-timer">
