Space bar now switches the clocks

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="actual-buttons" onclick="pauseCountdown1()">Pause</div>
                 <div class="actual-buttons" onclick="resetCountdown1()">Reset</div>
 
-                <div class="actual-buttons-2" onclick="startCountdown2()">Start</div>
+                <div class="actual-buttons-2" id="startButton" onclick="startCountdown2()">Start</div>
                 <div class="actual-buttons-2" onclick="pauseCountdown2()">Pause</div>
                 <div class="actual-buttons-2" onclick="resetCountdown2()">Reset</div>
             <!-- <input type="text" class="white-time-arrow-up" value="Increase time"></button> -->
