--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran|Comfortaa|Francois+One|Maven+Pro&display=swap" rel="stylesheet"> 
     <title>Pegusus Chess Clock</title>
 </head>
 <body>
     <div class="all">
         <div class="blocks">
-            <h1 >Pegagus</h1>
+            <h1>Pegasus</h1>                
+            
         </div>
         <div class="both-timers">
             <div id="first-timer">
