Added clock2 file, trying to make it object oriented

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div id="game"></div>
         <div class="button-panels">
 
-                <div class="actual-buttons" onclick="startCountdown1()">Start</div>
-                <div class="actual-buttons" onclick="pauseCountdown1()">Pause</div>
-                <div class="actual-buttons" onclick="resetCountdown1()">Reset</div>
+                <div class="actual-buttons" onclick="countdownTimer1.start()">Start</div>
+                <div class="actual-buttons" onclick="countdownTimer1.pause()">Pause</div>
+                <div class="actual-buttons" onclick="resetCountdown1.reset()">Reset</div>
 
                 <div class="actual-buttons-2" id="startButton" onclick="startCountdown2()">Start</div>
                 <div class="actual-buttons-2" onclick="pauseCountdown2()">Pause</div>
@@ -55,6 +55,6 @@
         </div> 
 
     </div>
-    <script src="clock.js"></script>
+    <script src="clock2.js"></script>
 </body>
 </html>
