--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 <div class="actual-buttons" onclick="countdownTimer1.start()">Start</div>
                 <div class="actual-buttons" onclick="countdownTimer1.pause()">Pause</div>
                 <div class="actual-buttons" onclick="resetCountdown1.reset()">Reset</div>
-
+<!-- 
                 <div class="actual-buttons-2" id="startButton" onclick="startCountdown2()">Start</div>
                 <div class="actual-buttons-2" onclick="pauseCountdown2()">Pause</div>
-                <div class="actual-buttons-2" onclick="resetCountdown2()">Reset</div>
+                <div class="actual-buttons-2" onclick="resetCountdown2()">Reset</div> -->
            
         </div> 
 
