Building out the new html with cleaner divs

--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 <body>
     <div class="all">
         <div class="blocks">
-            <h1>Pegasus</h1>                
+            <h1>Pegasus</h1>     
+            
+            <div class="both-clocks">
+                <div class="timer"></div>
+
+                <div class="timer"></div>
+
+
+            </div>
             
         </div>
 
@@ -20,7 +28,7 @@
 </body>
 </html>
 
-//Pull things from below as needed.
+<!-- Pull things from below as needed. -->
 
         <div class="actual-buttons-2" onclick="countdownTimer2.pause()">Pause</div>
         <div class="actual-buttons-2" onclick="resetCountdown2.reset()">Reset</div>
