--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <h1>Pegasus</h1>     
             
             <div class="both-clocks">
+                    <div class="actual-buttons-2" onclick="resetCountdown2.reset()">Reset</div>
                 <div class="timer"></div>
 
                 <div class="timer"></div>
