Fixed a git issue and reset, then rearranged a bit more for clarity

--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
             
             <div class="both-clocks">
                     <div class="actual-buttons-2" onclick="resetCountdown2.reset()">Reset</div>
+
+
                 <div class="timer">
                     <div class="actual-buttons" onclick="countdownTimer2.start()">Timer One Control</div>
                 </div>
-                    <div id="first-timer"></div>
+
+                    <div id="first-timer">
+
+                        
+                    </div>
 
 
                 <div class="timer"></div>
