Tried flipped letters AND commented out the flip since it wasn't working

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                     <div class="timer">
                             <div id="first-timer">
-                                    <div class="actual-buttons" onclick="countdownTimer1.flip()">Timer One Control</div>
+                                    <div class="actual-buttons" onclick="countdownTimer1.start()">Timer One Control</div>
                                 </div>
                     </div>
 
@@ -28,7 +28,7 @@
 
                     <div class="timer">
                         <div id="second-timer">
-                                <div class="actual-buttons" onclick="countdownTimer2.flip()">Timer Two Control</div>
+                                <div class="actual-buttons" onclick="countdownTimer2.start()">Timer Two Control</div>
                         </div>
                     </div>
             
