--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                     <div class="timer">
                             <div id="first-timer">
-                                    <div class="actual-buttons" onclick="countdownTimer1.start()">Timer One Control</div>
+                                    <div class="actual-buttons" onclick="countdownTimer1.start(), countdownTimer2.pause()">Timer One Control</div>
 
                                     <div class="time-display">
                     
@@ -37,7 +37,7 @@
 
                     <div class="timer">
                         <div id="second-timer">
-                                <div class="actual-buttons" onclick="countdownTimer2.start()">Timer Two Control</div>
+                                <div class="actual-buttons" onclick="countdownTimer2.start(), countdownTimer1.pause()">Timer Two Control</div>
                         
 
                         <div class="time-display">
