trying to grab the element from the js file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                     <div class="timer">
                             <div id="first-timer">
-                                    <div class="actual-buttons" onclick="countdownTimer1.start(), countdownTimer2.pause()">Timer One Control</div>
+                                    <div class="actual-buttons" id="button1" onclick="countdownTimer1.start(), countdownTimer2.pause()">Timer One Control</div>
 
                                     <div class="time-display">
                     
