Added missing id and now getting initialization error

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                     <div class="timer">
                         <div id="second-timer">
-                                <div class="actual-buttons" >Timer Two Control</div>
+                                <div class="actual-buttons" id="button2">Timer Two Control</div>
                         
 
                         <div class="time-display">
